--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,12 @@ repositories {
     mavenCentral()
 }
 
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter:2.6.2'
-    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.6.2'
     implementation 'org.postgresql:postgresql:42.3.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.2'
