Mongodb feature applied

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message="always"
+
+# MONGODB
+spring.data.mongodb.uri=mongodb://springuser:springuser@localhost:27017/?authSource=admin
+spring.data.mongodb.database=users
+spring.data.mongodb.authentication-database=admin
