--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
-group 'org.example'
+group 'org.me'
+
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -14,11 +15,12 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 dependencies {
 
-    implementation 'org.springframework.boot:spring-boot-starter:2.6.2'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.2'
-    implementation 'org.postgresql:postgresql:42.3.1'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.2'
+    implementation 'org.springframework.boot:spring-boot-starter:2.6.2' // Spring boot starter
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3' // Spring Web Support for Http requests
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.3' // Spring Data JPA Support
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.6.3' // Spring Data Mongodb support
+    implementation 'org.postgresql:postgresql:42.3.1' // PostgreSQL Support
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
