--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-server.error.include-message="always"
+server.error.include-message=always
 
 # MONGODB
 spring.data.mongodb.uri=mongodb://springuser:springuser@localhost:27017/?authSource=admin
